--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,20 +48,22 @@
 /* Styling IDs */
 
 #result {
-    background-color: black;
-    height: 7vh;
+    height: 8vh;
     color: white;
     font-size: 3.5rem;
-    text-align: right;
     opacity: 0.7;
 }
 
 #history {
-    background-color: black;
     color: grey;
+    height: 2vh;
+}
+
+#result, #history {
+    background-color: black;
     opacity: 0.7;
-    height: 3vh;
     text-align: right;
+    padding-right: 1rem;
 }
 
 #getResult, #c {
