--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     justify-content: center;
 }
 
-.operatoren div {
+.operatoren button {
     background-color: #113f67;
     min-width: 25vw;
     border: 1px solid black;
@@ -33,7 +33,7 @@
     display: flex;
 }
 
-.numbers div {
+.numbers button {
     min-width: 25vw;
     max-height: 17.5vh;
     border: 1px solid black;
